ウィジェット名をWordPress用と明示

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "TrheeItemList",
+  "name": "WordPress page model",
   "id": "1143100594030697423",
   "api": "1.0.0",
   "main": "code.js",
