WordPress 用の機能を実装する見込みがないのでリネーム

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "WordPress page model",
+  "name": "Simple List",
   "id": "1143100594030697423",
   "api": "1.0.0",
   "main": "code.js",
