--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "devDependencies": {
     "@figma/plugin-typings": "*",
     "@figma/widget-typings": "*",
-    "typescript": "*"
-  },
-  "dependencies": {
     "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "typescript": "*",
     "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
